# yj_discordbot

./: .gitignore  Cargo.toml
src/: discord.rs  main.rs
